# jpl-mars-rover

./: .gitignore  README.md
hardware/: README.md
hardware/Akkus/: readme.md
hardware/Sensoren/Lidar/: README.md
hardware/Sensoren/Ultraschall/: README.md
hardware/Servos/: I2C_Analyse.md  PWM_Analyse.md  README.md  calibrate_servos.py
hardware/Servos/Arduino_I2C/: Beispielausgabe.txt  I2CSniffer.ino  README.md
hardware/doku/Akkus/: readme.md
project-documentation/: README.md
project-documentation/01-ueberblick/: projektziel.md  team-und-rollen.md  umfang-und-abgrenzung.md
project-documentation/02-setup/: konfiguration.md
project-documentation/02-setup_vorläufig/: README.md  konfiguration_vorläufig.md
project-documentation/04-entwicklungsprozess/: arbeitsablauf.md
project-documentation/04-probleme-und-loesungen/: erkenntnisse.md
project-documentation/06-manueller_ansatz/: 01_ziel_und_idee.md  01_ziel_und_motivation.md  02_arbeitsablauf.md  02_architektur_und_struktur.md  03_autofocus_mdell_und_generierter_code.md  03_status_led_ros.md  04_autofocus_modell.md  04_ros2_wrapper_und_integrations.md  05-ROS2 Wrapper Node  05_generierter_code.md  06-ros2_package_beschreibung.xml  06_ro2_wrapper_adapter.md  07_fazit_und_ergebnisse.md  README.md
project-documentation/06-manueller_ansatz/generierter_code/: BlinkTimer10_ID_102.c  BlinkTimer10_ID_102.h  Component_Architecture1_ID_120.c  Component_Architecture1_ID_120.h  LedHW_Component_ID_103.c  LedHW_Component_ID_103.h  LedStatusController_ID_101.c  LedStatusController_ID_101.h  README.md  data_dictionary.c  data_dictionary.h
project-documentation/06-probleme-und-loesungen/: erkenntnisse.md
project-documentation/07-wichtig/: README.md  wichtig_orga.md
src/osr-rover-code/ROS/Ultraschall_Sensor/: CMakeLists.txt  Makefile  README.md  package.xml
src/osr-rover-code/ROS/Ultraschall_Sensor/inc/: main.h
src/osr-rover-code/ROS/Ultraschall_Sensor/inc-gen/: Component_Architecture1_ID_420.h  Echo_ID_431.h  Echo_ID_431.h.save  Echo_ID_431.h.save.1  Kontext_Rover_ID_704.h  Timer10_ID_579.h  TriggerFunk_ID_427.h  UltraschalSensor_HW_Componete_ID_435.h  data_dictionary.h
src/osr-rover-code/ROS/Ultraschall_Sensor/src/: mars_rover_listener.cpp  mars_rover_node_1.cpp
src/osr-rover-code/ROS/Ultraschall_Sensor/src-gen/: Component_Architecture1_ID_420.c  Echo_ID_431.c  Kontext_Rover_ID_704.c  Timer10_ID_579.c  TriggerFunk_ID_427.c  UltraschalSensor_HW_Componete_ID_435.c  data_dictionary.c
src/osr-rover-code/ROS/osr_gazebo/: CMakeLists.txt  README.md
src/osr-rover-code/ROS/osr_gazebo/install/: local_setup.sh  setup.sh
src/osr-rover-code/ROS/osr_gazebo/launch/: rviz.launch.py  test_world.launch.py  world.launch.py
src/osr-rover-code/ROS/osr_gazebo/log/: latest_build
src/osr-rover-code/ROS/osr_gazebo/meshes/: ultrasonic_back_v4.stl  ultrasonic_front_v6.stl
src/osr-rover-code/ROS/osr_gazebo/rviz/: custom_settings.rviz
src/osr-rover-code/ROS/osr_gazebo/urdf/: .insert_transmission.urdf.xacro.swp  (+2 more)
src/osr-rover-code/ROS/osr_status_led/: package.xml  setup.cfg  setup.py
src/osr-rover-code/ROS/osr_status_led/launch/: status_led.launch.py
src/osr-rover-code/ROS/osr_status_led/osr_status_led/: led_marker_node.py
src/osr-rover-code/ROS/ultrasonic_sensor/: CMakeLists.txt  package.xml
src/osr-rover-code/ROS/ultrasonic_sensor/include/: Component_Architecture1_ID_420.h  Echo_ID_431.h  Kontext_Rover_ID_704.h  Timer10_ID_579.h  TriggerFunk_ID_427.h  UltraschalSensor_HW_Componete_ID_435.h  af3_ultrasound_wrapper.h  data_dictionary.h
src/osr-rover-code/ROS/ultrasonic_sensor/src/: Component_Architecture1_ID_420.c  Echo_ID_431.c  Kontext_Rover_ID_704.c  Timer10_ID_579.c  TriggerFunk_ID_427.c  UltraschalSensor_HW_Componete_ID_435.c  af3_ultrasound_node.cpp  af3_ultrasound_wrapper.c  data_dictionary.c
(+71 files in other folders)
