<?xml version="1.0"?>
<package format="3">
  <name>mars_rover_projekt_1</name>
  <version>0.1.0</version>
  <description>ROS2 Package für Mars Rover Projekt</description>
  <maintainer email="a.alqathmi21@gmail.com">Abdul</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

