<?xml version="1.0"?>
<package format="3">
  <name>osr_status_led</name>
  <version>0.0.1</version>
  <description>Status LED visualization as RViz marker</description>

  <maintainer email="noreply@fh-aachen.de">MarsRover Team</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>aa
